syntax = "proto3";

package helloworld;

option go_package = "08_grpc/15_customized_protobuf_plugin/helloworld_protobuf;helloworld";

import "08_grpc/15_customized_protobuf_plugin/plugin_protobuf/plugin.proto";

service Greeter {
  option (interceptor.service_handler) = {
    authorization : "login_token",
  };

  rpc SayHello1 (HelloRequest) returns (HelloReply) {
    option (interceptor.method_handler) = {
      whitelist : "ip_whitelist",
      logger: true,
    };
  }

  rpc SayHello2 (HelloRequest) returns (HelloReply) {
    option (interceptor.method_handler) = {
      logger: false,
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}